# suraft

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: semantic.yml
.github/workflows/: ci.yml
examples/hello/: Cargo.toml  hello-suraft-cn.md
examples/simple-machine/: Cargo.toml
examples/simple-machine/src/: lib.rs  logging.rs  main.rs  memstore.rs  network.rs
internal/memstore/: Cargo.toml
internal/memstore/src/: lib.rs
internal/pseudonet/: Cargo.toml
macros/: Cargo.toml  README.md
macros/src/: lib.rs  lib_readme.md
network/pseudonet/: Cargo.toml
rfcs/: 0002-arch.md  0003-data-storage.md  0006-implementation-api.md
stores/memstore/: Cargo.toml  README.md
stores/memstore/src/: lib.rs  test.rs
stores/rocksstore/: Cargo.toml  README.md
stores/rocksstore/src/: lib.rs  test.rs
stores/sledstore/: Cargo.toml  README.md
stores/sledstore/src/: lib.rs  test.rs
suraft/: Cargo.toml
suraft/src/: change_members.rs  error.rs  feature_serde_test.rs  lib.rs  log_id_range.rs  node.rs  storage_error.rs  summary.rs  type_config.rs
suraft/src/app/: mod.rs
suraft/src/base/: leased.rs  mod.rs
suraft/src/compat/: mod.rs  upgrade.rs
suraft/src/config/: config.rs  config_test.rs  errors.rs
suraft/src/core/: core.rs  core_impl.rs  core_state.rs  mod.rs  notification.rs  raft_core.rs  tick.rs
suraft/src/engine/: command.rs  engine_config.rs  engine_impl.rs  leader_log_ids.rs  log_id_list.rs  replication_progress.rs  testing.rs
suraft/src/entry/: mod.rs  payload.rs  traits.rs
suraft/src/error/: allow_next_revert_error.rs  decompose.rs  node_not_found.rs  streaming_error.rs
suraft/src/errors/: mod.rs
suraft/src/impls/: mod.rs
suraft/src/log_id/: log_id_option_ext.rs  mod.rs  raft_log_id.rs
suraft/src/membership/: effective_membership.rs  effective_membership_test.rs  into_nodes.rs  membership.rs  membership_test.rs  stored_membership.rs
suraft/src/metrics/: metric.rs  metric_display.rs  metrics.rs  mod.rs  raft_metrics.rs  serde_instant.rs  server_state.rs  wait.rs  wait_test.rs
suraft/src/network/: connection.rs  mod.rs  snapshot_transport.rs
suraft/src/proposer/: candidate.rs  leader.rs  leader_state.rs
suraft/src/quorum/: coherent.rs  coherent_test.rs  progress.rs  quorum_set.rs  quorum_set_impl.rs
suraft/src/raft/: core_state.rs  declare_raft_types_test.rs  impl_raft_blocking_write.rs  mod.rs  raft_inner.rs  trigger.rs
suraft/src/raft_state/: io_state.rs  log_state_reader.rs  mod.rs  vote_state_reader.rs
suraft/src/replication/: callbacks.rs  mod.rs  replication_session_id.rs  request.rs  response.rs
suraft/src/runtime/: mod.rs
suraft/src/storage/: callback.rs  helper.rs  log_reader_ext.rs  log_state.rs  log_storage.rs  log_storage_ext.rs  path_config.rs  snapshot.rs  snapshot_meta.rs  snapshot_signature.rs
suraft/src/suraft/: change_membership.rs  inner.rs  mod.rs  request_vote.rs  runtime_config_handle.rs
suraft/src/testing/: common.rs
suraft/src/type_config/: mod.rs  type_config_ext.rs  util.rs
suraft/src/vote/: committed.rs  mod.rs  non_committed.rs  ref_vote.rs  vote.rs  vote_status.rs
tests/: Cargo.toml
tests/tests/append_entries/: t10_conflict_with_empty_entries.rs  t10_see_higher_vote.rs  t11_append_conflicts.rs  t11_append_entries_with_bigger_term.rs  t11_append_inconsistent_log.rs  t11_append_updates_membership.rs  t30_replication_1_voter_to_isolated_learner.rs  t60_enable_heartbeat.rs  t61_heartbeat_reject_vote.rs  t61_large_heartbeat.rs  t90_issue_216_stale_last_log_id.rs
tests/tests/client_api/: t10_client_writes.rs  t11_client_reads.rs  t12_trigger_purge_log.rs  t13_begin_receiving_snapshot.rs  t13_get_snapshot.rs  t13_install_full_snapshot.rs  t13_trigger_snapshot.rs  t14_transfer_leader.rs  t16_with_raft_state.rs  t16_with_state_machine.rs  t50_lagging_network_write.rs  t51_write_when_leader_quit.rs
tests/tests/elect/: t10_elect_compare_last_log.rs  t11_elect_seize_leadership.rs
tests/tests/fixtures/: mod.rs
tests/tests/life_cycle/: t10_initialization.rs  t11_shutdown.rs  t50_follower_restart_does_not_interrupt.rs  t50_single_follower_restart.rs  t50_single_leader_restart_re_apply_logs.rs  t90_issue_607_single_restart.rs  t90_issue_920_non_voter_leader_restart.rs
tests/tests/log_store/: t10_save_committed.rs
tests/tests/management/: t10_raft_config.rs
tests/tests/membership/: t10_learner_restart.rs  t10_single_node.rs  t11_add_learner.rs  t12_concurrent_write_and_add_learner.rs  t20_change_membership.rs  t21_change_membership_cases.rs  t30_commit_joint_config.rs  t30_elect_with_new_config.rs  t31_add_remove_follower.rs  t31_remove_leader.rs  t31_removed_follower.rs  t51_remove_unreachable_follower.rs  t52_change_membership_on_uninitialized_node.rs  t99_issue_471_adding_learner_uses_uninit_leader_id.rs  t99_issue_584_replication_state_reverted.rs  t99_new_leader_auto_commit_uniform_config.rs
tests/tests/metrics/: t10_current_leader.rs  t10_leader_last_ack.rs  t10_purged.rs  t10_server_metrics_and_data_metrics.rs  t20_metrics_state_machine_consistency.rs  t30_leader_metrics.rs  t40_metrics_wait.rs
tests/tests/replication/: t10_append_entries_partial_success.rs  t50_append_entries_backoff.rs  t50_append_entries_backoff_rejoin.rs  t51_append_entries_too_large.rs  t60_feature_loosen_follower_log_revert.rs  t61_allow_follower_log_revert.rs
tests/tests/snapshot_building/: t10_build_snapshot.rs  t35_building_snapshot_does_not_block_append.rs  t35_building_snapshot_does_not_block_apply.rs  t60_snapshot_policy_never.rs
tests/tests/snapshot_streaming/: t10_api_install_snapshot.rs  t10_api_install_snapshot_with_lower_vote.rs  t20_startup_snapshot.rs  t30_purge_in_snapshot_logs.rs  t31_snapshot_overrides_membership.rs  t32_snapshot_uses_prev_snap_membership.rs  t33_snapshot_delete_conflict_logs.rs  t34_replication_does_not_block_purge.rs  t50_snapshot_line_rate_to_snapshot.rs  t50_snapshot_when_lacking_log.rs  t51_after_snapshot_add_learner_and_request_a_log.rs  t60_snapshot_chunk_size.rs  (+1 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+132 files in other folders)
