[package]
name = "hello"

edition.workspace = true
version.workspace = true

[dependencies]
maplit = { workspace = true }
serde = { workspace = true }
suraft = { workspace = true }
memstore = { workspace = true }
pseudonet = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
