[package]
name = "simple-machine"
publish = false

edition.workspace = true
version.workspace = true

[package.metadata.release]
release = false

[dependencies]
maplit = { workspace = true }
memstore = { workspace = true }
pseudonet = { workspace = true }
serde = { workspace = true }
suraft = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
