[package]
name = "pseudonet"

edition.workspace = true
version.workspace = true

categories.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
suraft = { workspace = true }
