[package]
name = "suraft-memstore"
description = "A in-memory implementation of the `suraft::RaftLogStorage` and `suraft::RaftStateMachine` trait."
documentation = "https://docs.rs/suraft-memstore"
readme = "README.md"

version       = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
categories    = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }

[dependencies]
suraft = { path= "../../suraft", version = "0.1.0", features=["serde", "type-alias"] }

serde           = { workspace = true }
serde_json      = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]

[features]
bt = ["suraft/bt"]

[package.metadata.docs.rs]
all-features = true
