[package]
name = "memstore"
description = "A in-memory implementation of the `suraft::LogStorage`"

edition.workspace = true
version.workspace = true

categories.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
suraft = { workspace = true, features = ["type-alias"] }
tracing = { workspace = true }

[features]
bt = ["suraft/bt"]

[package.metadata.docs.rs]
all-features = true
